:bug: Correction de l'affichage de l'EE rm -rf / pour la version mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -266,6 +266,14 @@ ul {
     flex-direction: column;
     justify-content: space-evenly;
   }
+  canvas {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  }
 
   .terminal {
     position: unset;
